
2021-12-30  Ron Norman <rjn@inglenet.com>

	* reportio.c: Move data fields before invoking DECLARATIVES code
	* numeric.c: Speed up cob_decimal_add, cob_decimal_sub, cob_decimal_cmp

2021-12-29  Ron Norman <rjn@inglenet.com>

	* reportio.c: Process CONTROL Headings in opposite order to Footings

2021-12-27  Ron Norman <rjn@inglenet.com>

	* reportio.c: Fixed spacing and test cases to match Microfocus

2021-12-12  Ron Norman <rjn@inglenet.com>

	* common.h: Added flag_do_rollback
	* fileio.c: If flag_do_rollback is set then all WRITE/DELETE/REWRITE
				to be done regardless of file open mode

2021-12-08  Ron Norman <rjn@inglenet.com>

	* move.c,common.h: Added cob_set_compx for saving values into
				COMP-X field

2021-12-05  Ron Norman <rjn@inglenet.com>

	* fileio.c,coblocal.h: Removed unused/unsettable variable cob_ls_uses_cr

2021-11-28  Ron Norman <rjn@inglenet.com>

	* fileio.c: Changes to open sequential files in binary mode on Windows
				(Untested on real Windows at this time)

2021-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sig_name, cob_get_sig_description,
	  cob_set_sig_description): hardened against unexpected signal numbers
	* common.c (signals, cob_get_sig_description): description is
	  post-initialized to allow use of gettext - non-static descriptions

2021-11-14  Ron Norman <rjn@inglenet.com>

	* common.h: Add prototype for BIT-WISE cob_logical_xxx functions
	* numeric.c: Add code for the BIT-WISE cob_logical_xxx functions
	* intrinsic.c (cob_intr_binop): add code for the BIT-WISE operations
	* common.h, call.c: allow removal of longjump by defining COB_WITHOUT_JMP

2021-11-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Test code for bug #604 but not sure if it should be

2021-11-08  Ron Norman <rjn@inglenet.com>

	* common.h: Add feature flag COB_FILE_LS_DEFAULT
	* fileio.c: improvments to WRITE ADVANCING for SEQUENTIAL file

2021-11-06  Ron Norman <rjn@inglenet.com>

	* common.h: Add COB_SET_SEQUENTIAL, COB_SET_ADVANCING